v5.10.1/python/_sources/paraview.simple.Calculator.rst.txt
paraview.simple.Calculator
==========================

.. currentmodule:: paraview.simple

.. autofunction:: Calculator

Data Descriptors
----------------


   
   AttributeType
       This property determines on which types of field data the computation is to
       be performed on.
   
   CoordinateResults
       The value of this property determines whether the
       results of this computation should be used as point coordinates or as a
       new array.
   
   Function
       This property contains the equation for computing the new
       array.
   
   FunctionParserType
       Hidden property that specifies whether the old (ParaView 5.9 and before)
       expression parser or new (ParaView 5.10) vtkPVLinearExtrusionFilter is used.
   
   Input
       This property specifies the input dataset (vtkDataSet, vtkTable or vtkGraph) to the
       Calculator filter. The scalar and vector variables may be chosen from
       this dataset's arrays.
   
   ReplaceInvalidResults
       This property determines whether invalid values in the
       computation will be replaced with a specific value. (See the
       ReplacementValue property.)
   
   ReplacementValue
       If invalid values in the computation are to be replaced
       with another value, this property contains that value.
   
   ResultArrayName
       This property contains the name for the output array
       containing the result of this computation.
   
   ResultArrayType
       This property determines what array type to output.
       The default is a vtkDoubleArray.
   
   ResultNormals
       Set whether to output results as point/cell
       normals. Outputting as normals is only valid with vector
       results. Point or cell normals are selected using
       AttributeMode.
   
   ResultTCoords
       Set whether to output results as point/cell
       texture coordinates.  Point or cell texture coordinates are
       selected using AttributeMode. 2-component texture coordinates
       cannot be generated at this time.
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`